gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    kustomize.toolkit.fluxcd.io/name: istio-gateway
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: istio-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-load-balancer-resource-group: clusters-dev
    parametersRef:
      group: ""
      kind: ConfigMap
      name: istio-gateway-config
  allowedListeners:
    namespaces:
      from: All
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: radix-wildcard-tls-cert
      mode: Terminate
