gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple
  namespace: oauth-demo-dev
  annotations:
    radix.equinor.com/radix-preview-nextgen-router: "true"
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-system
      sectionName: https
    # - group: gateway.networking.x-k8s.io
    #   kind: XListenerSet
    #   name: simple-external-dns
    #   namespace: oauth-demo-dev
  hostnames:
    - nilssimple1.dev.radix.equinor.com
    - nilssimple2.dev.radix.equinor.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: "Strict-Transport-Security"
                value: "max-age=31536000; includeSubDomains; preload"
      backendRefs:
        - group: ""
          kind: Service
          name: simple
          port: 9001
          weight: 1

# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: oauth-proxy
#   namespace: oauth-demo-dev
# spec:
#   parentRefs:
#     - group: gateway.networking.k8s.io
#       kind: Gateway
#       name: istio-gateway
#       namespace: istio-system
#       sectionName: https
#   hostnames:
#     - oauth-demo.app.dev.radix.equinor.com
#     - oauth-proxy-oauth-demo-dev.dev.radix.equinor.com
#     - oauth-proxy-oauth-demo-dev.weekly-50.dev.radix.equinor.com
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - group: ""
#           kind: Service
#           name: oauth-proxy
#           port: 4180
#           weight: 1
